<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_send"
        android:text="Hello World!" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_rec"
        android:text="Hello World!" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/but_scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan" />

        <Spinner
            android:id="@+id/sp_scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BT_address"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <EditText
            android:id="@+id/et_BT_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/BT_address" />

        <Button
            android:id="@+id/but_sock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BT" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/but_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cmd_stop" />

        <Button
            android:id="@+id/but_leds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/cmd_leds" />

        <EditText
            android:id="@+id/et_red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:inputType="number"
            android:text="200" />

        <EditText
            android:id="@+id/et_green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:inputType="number"
            android:text="0" />

        <EditText
            android:id="@+id/et_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:inputType="number"
            android:text="0" />

        <Spinner
            android:id="@+id/sp_ledid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/leds_ids" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_2"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/but_front"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cmd_front" />

        <Button
            android:id="@+id/but_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cmd_left" />

        <Button
            android:id="@+id/but_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cmd_right" />

        <Button
            android:id="@+id/but_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cmd_back" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_3"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/but_get_gyro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cmd_get_gyro" />
    </LinearLayout>



        <io.github.controlwear.virtual.joystick.android.JoystickView
            xmlns:custom="http://schemas.android.com/apk/res-auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/jv"
            custom:JV_buttonColor="#FF6E40"
            custom:JV_buttonSizeRatio="15%"
            custom:JV_borderColor="#00796B"
            custom:JV_backgroundColor="#009688"
            custom:JV_borderWidth="4dp"
            custom:JV_fixedCenter="false"
        />

</LinearLayout>